cmake_minimum_required(VERSION 3.6.2)
set(CMAKE_CXX_STANDARD 14)
set(Boost_USE_STATIC_LIBS ON)
#set(BOOST_ROOT C:/Boost)
find_package(Boost COMPONENTS context coroutine date_time filesystem graph iostreams serialization system thread timer)
include_directories(${Boost_INCLUDE_DIRS})
link_libraries(${Boost_LIBRARIES})
add_subdirectory(Boost.Algorithm)
if(NOT CYGWIN)
add_subdirectory(Boost.Asio)
endif()
add_subdirectory(Boost.Assign)
add_subdirectory(Boost.Bimap)
add_subdirectory(Boost.DateTime)
add_subdirectory(Boost.EnableIf)
add_subdirectory(Boost.Filesystem)
add_subdirectory(Boost.Flyweight)
add_subdirectory(Boost.Fusion)
add_subdirectory(Boost.Graph)
add_subdirectory(Boost.Interprocess)
if(NOT WIN32)
add_subdirectory(Boost.IOStreams)
endif()
add_subdirectory(Boost.Lockfree)
add_subdirectory(Boost.MSM)
add_subdirectory(Boost.MultiIndex)
add_subdirectory(Boost.PointerContainer)
add_subdirectory(Boost.PropertyTree)
add_subdirectory(Boost.Range)
add_subdirectory(Boost.ScopeExit)
add_subdirectory(Boost.Serialization)
add_subdirectory(Boost.Signals2)
add_subdirectory(Boost.Spirit)
add_subdirectory(Boost.StringAlgorithms)
add_subdirectory(Boost.Thread)
